Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11, 11.4, 11.7(EOL), 11.8
Description
Fails at 10.5 df602ff7fa5ed9424a1d7ebaba67b665e2f6d1f6 and 10.6 a6ab0e6c0be218761e4dadf8959c7f42e5fea762
Simplified test case (will test the fix on the original case in MENT-2204):
--disable_query_log
|
--disable_result_log
|
--source ../../t/test_init.inc
|
--enable_result_log
|
--enable_query_log
|
--source include/have_innodb.inc
|
set spider_same_server_link= 1; |
evalp CREATE SERVER srv FOREIGN DATA WRAPPER mysql |
OPTIONS (SOCKET "$MASTER_1_MYSOCK", DATABASE 'test',user 'root'); |
|
|
CREATE TABLE t1 (c6 decimal(6,0)) ENGINE=InnoDB; |
|
|
CREATE TABLE t1_s (c6 decimal(6,0)) |
ENGINE=SPIDER COMMENT='wrapper "mariadb", srv "srv", table "t1"' ; |
|
|
CREATE TABLE t2 (c8 decimal(8,0), c6 decimal(6,0)) ENGINE=InnoDB; |
|
|
INSERT INTO t1 VALUES (123456), (654321); |
|
|
# fail with ER_WARN_DATA_OUT_OF_RANGE (1264): Out of range value for |
# column c6 at row 1 |
# success when selecting from t1 or when |
# set statement spider_use_handler=1 for |
INSERT INTO t2 (c8, c6) SELECT 12345678, c6 FROM t1_s GROUP BY c6; |
|
|
drop table t2, t1_s, t1; |
drop server srv; |
--disable_query_log
|
--disable_result_log
|
--source ../../t/test_deinit.inc
|
--enable_result_log
|
--enable_query_log |
Attachments
Issue Links
- blocks
-
MDEV-36121 Additional column in SELECT statement from Spider remote DB is offsetting other columns.
-
- Closed
-
- is caused by
-
MDEV-26345 SELECT MIN on Spider table returns more rows than expected
-
- Closed
-
- is duplicated by
-
MDEV-36121 Additional column in SELECT statement from Spider remote DB is offsetting other columns.
-
- Closed
-
-
MDEV-36608 Table with ENGINE=SPIDER provides incorrect values after first row of data from query
-
- Closed
-
-
MDEV-36756 Select query with a constant against a Spider table produces incorrect results.
-
- Closed
-