MDEV-35874 Spider: add missing skips when fetching results

This is a fixup of the MDEV-26345 commit
77ed235d50bd9b1480f26d18ea0b70ca7480af23, where a spider_result field
skips was introduced to skip reading const items results into spider
rows. In this patch we add missing skips in calls to fetch_result()